--- a/main.html
+++ b/main.html
@@ -10,6 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<div>
+	<h1 id="f1">Flowers photos</h1>
+	<p>There is the collection of variety of Flower that you would much like</p>
+</div>
+	<div>
+	<h1 id="f2">Roses pictures</h1>
+		<p>Roses is kind of flower that has very decent colur everbody get attracted and young people demanding more </p>
+    </div>
 
 </body>
 
